		so document handlers don't have to worry about the socket.

----------------- released 2.3.1 October 5, 1999 ------------------

lib/doc.tcl	Fixed cookie bug where Doc_SetCookie could result in a cookie
		being given out to different browsers!
		Also fixed use of file mtime so it works on Macintosh.

lib/httpd.tcl	Fixed reading of mime.types so it uses file join and works on Mac.
		Added HttpdCookieLog, which is not used by default.

lib/status.tcl	Changes status bar charts to use gifs.

lib/url.tcl	Fixed use of the UrlCache array when post data was available.
 
----------------- released 2.3.2 October 15, 1999 ------------------

lib/httpd.tcl	*IMPORTANT* fixed a bug in Httpd_GetPostData where an
		eof condition on the socket was not handled properly.
		This caused an infinite loop in Url_DecodeQuery.
  
lib/cgi.tcl	Added TZ to the environment variables passed
		through to scripts

lib/doc.tcl	Fixed DocFallback so it will not select files like
		foo.tml.old when asked for foo.html

lib/log.tcl	Added an optional debug log.  You have to define
		Log(debug_file) to "1" to enable this, and then make calls
		to Log with "Debug" as the reason.

bin/imagehttpd.tcl	Updated this to fix the 1.1 support.  This seems
		correct for simple cases, but generates some spurious errors
		in real life web-sites.

bin/torture.tcl	Added some feedback to the Iterate proc

----------------- released 2.3.3 October 25, 1999 ------------------

lib/dirlist.tcl	Fixed directory listing to have relative pathnames and to
		Url Encode file names (mostly, except for . and _).  This fixes
		the handing of files with spaces in their names.

lib/httpd.tcl	Strip leading http://server.name from incoming URLs, and filter
		out any proxy requests to other servers.

lib/log.tcl	** Added cookie to log ** as an extra field.  Check your log
		analysis programs to make sure this doesn't confuse them.

----------------- released 2.3.4 November 28, 1999 ------------------

